todoyu sysmanager extension changelog

sysmanager 1.1.2 - ???
	* Bugfix: Error label was interpolated too soon
	* Bugfix: Uploaded extensions were not recognized as commercial without a license
	* Change: Extension status is now also recognized when not lowercase (ex: Beta)

sysmanager 1.1.1 - 2011-07-25
	* Added: Missing label, error prevention on unknown extensions
	* Added: Testing for invalid repository response and throw exception
	* Feature: Added functionality to register imported extensions
	* Bugfix: Send info for registration to check API version
	* Added: German translations
	* Bugfix: Fixed invalid labels in checkout dialogs
	* Change: Changed API to work with new tER API
	* Added: Problem with the API are now reported to the user

sysmanager 1.1.0 - 2011-06-17
	* Feature: Added todoyuURL setting in config
	* Feature: Added classes for repository and updater
	* Feature: Show message if no roles is selected
	* Feature: Added update warning to extension update dialog
	* Feature: Added system logging level configuration in sysmanager
	* Changed: Default setting for required password strength: 5 chars miniumum length, no special chars
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name
	* Changed: Sysmanager now looks for extension extconf.xml files in config\form\admin\
 	* Bugfix: Added missing notification after deletion of role


sysmanager 1.0.8
	* Added changelog